added async and queried job execution framework in backend, integrated diamond module identification